deploy/kustomize/apiservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiservice
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: hello.dev.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apiservice
                port:
                  name: http
  tls:
    - hosts:
        - hello.dev.localhost
      # no secretName: falls back to ingress-nginx's --default-ssl-certificate
